re-study/practice/kubernetes/4_eurekaserver.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eurekaserver-deployment
  labels:
    app: eurekaserver
spec:
  replicas: 1
  selector:
    matchLabels:
      app: eurekaserver
  template:
    metadata:
      labels:
        app: eurekaserver
    spec:
      containers:
      - name: eurekaserver
        image: chunglv6/eurekaserver:buildpacks
        ports:
        - containerPort: 8070
---
apiVersion: v1
kind: Service
metadata:
  name: eurekaserver-service
spec:
  selector:
    app: eurekaserver
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 8070
      targetPort: 8070
