re-study/practice/kubernetes/6_cards.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cards-deployment
  labels:
    app: cards
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cards
  template:
    metadata:
      labels:
        app: cards
    spec:
      containers:
      - name: cards
        image: chunglv6/cards:buildpacks
        ports:
        - containerPort: 9000
---
apiVersion: v1
kind: Service
metadata:
  name: cards-service
spec:
  selector:
    app: cards
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 9000
      targetPort: 9000
