re-study/practice/kubernetes/7_loans.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: loans-deployment
  labels:
    app: loans
spec:
  replicas: 1
  selector:
    matchLabels:
      app: loans
  template:
    metadata:
      labels:
        app: loans
    spec:
      containers:
      - name: loans
        image: chunglv6/loans:buildpacks
        ports:
        - containerPort: 8090
---
apiVersion: v1
kind: Service
metadata:
  name: loans-service
spec:
  selector:
    app: loans
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 8090
      targetPort: 8090
