re-study/practice/kubernetes/8_gateway.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gatewayserver-deployment
  labels:
    app: gatewayserver
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gatewayserver
  template:
    metadata:
      labels:
        app: gatewayserver
    spec:
      containers:
      - name: gatewayserver
        image: chunglv6/gatewayserver:buildpacks
        ports:
        - containerPort: 8072
---
apiVersion: v1
kind: Service
metadata:
  name: gatewayserver-service
spec:
  selector:
    app: gatewayserver
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 8072
      targetPort: 8072
